@@ -1,0 +1,4 @@
+bin/
+usr/share/locale/
+usr/share/man/man1/
+usr/share/man/man5/
