@@ -8,17 +8,6 @@ include /usr/share/dpkg/architecture.mk
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
 
-package = acl
-develop = lib$(package)1-dev
-library = lib$(package)1
-
-dirme  = debian/$(package)
-dirdev = debian/$(develop)
-dirlib = debian/$(library)
-pkgme  = DIST_ROOT=$(CURDIR)/$(dirme);  export DIST_ROOT;
-pkgdev = DIST_ROOT=$(CURDIR)/$(dirdev); export DIST_ROOT;
-pkglib = DIST_ROOT=$(CURDIR)/$(dirlib); export DIST_ROOT;
-
 options = export DEBUG=-DNDEBUG DISTRIBUTION=debian \
 	  INSTALL_USER=root INSTALL_GROUP=root CONFIG_SHELL=/bin/sh;
 
@@ -59,20 +48,22 @@ binary-arch: built
 	dh_testdir
 	dh_testroot
 	
-	-rm -rf $(dirme) $(dirdev) $(dirlib)
-	$(pkgme)  $(MAKE) -C . install
-	$(pkgdev) $(MAKE) -C . install-dev
-	$(pkglib) $(MAKE) -C . install-lib
+	dh_prep
+	dh_installdirs
 	
-	rm -f $(dirdev)/usr/lib/libacl.la
-	rm -f $(dirdev)/lib/$(DEB_HOST_MULTIARCH)/libacl.la
+	DIST_ROOT=$(CURDIR)/debian/tmp \
+	  $(MAKE) install install-dev install-lib
+	
+	dh_install
 	dh_installdocs
 	dh_installchangelogs doc/CHANGES
+	dh_installman
+	dh_link
 	dh_strip
 	dh_compress
 	dh_fixperms
-	dh_makeshlibs -N $(library)
-	dh_makeshlibs -p $(library) -V 'libacl1 (>= 2.2.51-8)'
+	dh_makeshlibs -N libacl1
+	dh_makeshlibs -p libacl1 -V 'libacl1 (>= 2.2.51-8)'
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
